--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card mb-4">
-                    <img src="flower1.jpg" class="card-img-top" alt="Flower 1">
+                    <img src="" class="card-img-top" alt="Flower 1">
                     <div class="card-body">
                         <h5 class="card-title">Rose Bouquet</h5>
                         <p class="card-text">A classic arrangement of beautiful red roses.</p>
@@ -27,7 +27,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card mb-4">
-                    <img src="flower2.jpg" class="card-img-top" alt="Flower 2">
+                    <img src="" class="card-img-top" alt="Flower 2">
                     <div class="card-body">
                         <h5 class="card-title">Lily Mix</h5>
                         <p class="card-text">An elegant mix of lilies in various colors.</p>
@@ -37,7 +37,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card mb-4">
-                    <img src="flower3.jpg" class="card-img-top" alt="Flower 3">
+                    <img src="" class="card-img-top" alt="Flower 3">
                     <div class="card-body">
                         <h5 class="card-title">Sunflower Surprise</h5>
                         <p class="card-text">Brighten someone's day with a cheerful sunflower arrangement.</p>
