--- a/src/main/resources/templates/fragments/commons.html
+++ b/src/main/resources/templates/fragments/commons.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 </head>
 <body>
 <header>
@@ -37,7 +38,7 @@
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
                     <form th:method="post"
-                          th:action="@{/users/logout}">
+                          th:action="@{/logout}">
                         <input type="submit" class="btn btn-link" value="Logout"/>
                     </form>
                 </li>
