--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="~{fragments/commons::head}"></head>
 <body>
@@ -14,18 +15,23 @@
                         <label for="email">Email address</label>
                         <input type="email"
                                name="email"
-                               th:value="${email}"
+                               th:value="*{email}"
+
                                class="form-control"
                                id="email"
                                placeholder="Enter your email">
+
                     </div>
                     <div class="form-group">
                         <label for="password">Password</label>
                         <input type="password"
                                name="password"
+
+
                                class="form-control"
                                id="password"
                                placeholder="Enter your password">
+
                     </div>
                     <div class="form-group form-check">
                         <input type="checkbox"
@@ -34,6 +40,14 @@
                                name="rememberme">
                         <label class="form-check-label" for="rememberMe">Remember me</label>
                     </div>
+
+
+                    <p th:if="${bad_credentials}" class="errors alert alert-danger">
+                        Invalid username or password.
+                    </p>
+
+                    <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
+
                     <button type="submit" class="btn btn-primary btn-block">Login</button>
                 </form>
             </div>
