--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -12,20 +12,23 @@
                     <h2>Register</h2>
                     <div class="form-group">
                         <label for="username">Username</label>
-                        <input th:field="*{username}" type="text" class="form-control" id="username" placeholder="Enter your username">
+                        <input th:field="*{username}" th:errorclass="bg-danger" type="text" class="form-control" id="username" placeholder="Enter your username">
+                        <small th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="text-danger">Username error message</small>
                     </div>
                     <div class="form-group">
                         <label for="email">Email address</label>
-                        <input th:field="*{email}" type="email" class="form-control" id="email" placeholder="Enter your email">
+                        <input th:field="*{email}" th:errorclass="bg-danger" type="email" class="form-control" id="email" placeholder="Enter your email">
+                        <small th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-danger">Username error message</small>
                     </div>
                     <div class="form-group">
                         <label for="password">Password</label>
-                        <input th:field="*{password}" type="password" class="form-control" id="password" placeholder="Enter your password">
+                        <input th:field="*{password}" th:errorclass="bg-danger" type="password" class="form-control" id="password" placeholder="Enter your password">
+                        <small th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="text-danger">Username error message</small>
                     </div>
                     <div class="form-group">
                         <label for="confirmPassword">Confirm Password</label>
-                        <input type="password" class="form-control" id="confirmPassword"
-                               placeholder="Confirm your password">
+                        <input th:field="*{confirmPassword}" th:errorclass="bg-danger" th:classappend="${#fields.hasErrors('password')} ? 'bg-danger'"type="password" class="form-control" id="confirmPassword" placeholder="Confirm your password" >
+                        <small th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}" class="text-danger">Username error message</small>
                     </div>
                     <button type="submit" class="btn btn-primary btn-block">Register</button>
                 </form>
