--- a/src/main/resources/templates/fragments/commons.html
+++ b/src/main/resources/templates/fragments/commons.html
@@ -27,24 +27,33 @@
                 <li class="nav-item" sec:authorize="!isAuthenticated()">
                     <a class="nav-link" href="/login">Login</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/home">Home</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="adminDropdown" role="button" data-toggle="dropdown"
+                       aria-haspopup="true" aria-expanded="false">
+                        Admin Panel
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="adminDropdown">
+                        <a class="dropdown-item" href="#">Option 1</a>
+                        <a class="dropdown-item" href="#">Option 2</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Another Option</a>
+                    </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/products">Products</a>
+                    <a class="nav-link" href="/products/categories">Products</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/contacts">Contact</a>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <form th:method="post"
-                          th:action="@{/logout}">
-                        <input type="submit" class="btn btn-link" value="Logout"/>
+                    <form th:method="post" th:action="@{/logout}">
+                        <input type="submit" class="btn btn-link nav-link logout" value="Logout"/>
                     </form>
                 </li>
             </ul>
         </div>
     </nav>
+
 </header>
 <footer class="text-center py-4 bg-light fixed-bottom">
     <p>&copy; 2023 Flower Delivery</p>
