--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 mx-auto">
-                <form class="login-form" th:action="@{/login}" th:method="POST">
+                <form class="custom-form" th:action="@{/login}" th:method="POST">
                     <h2>Login</h2>
                     <div class="form-group">
                         <label for="email">Email address</label>
