--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 mx-auto">
-                <form class="registration-form" th:action="@{/register}" th:method="POST" th:object="${userRegisterBindingModel}">
+                <form class="custom-form" th:action="@{/register}" th:method="POST" th:object="${userRegisterBindingModel}">
                     <h2>Register</h2>
                     <div class="form-group">
                         <label for="username">Username</label>
