--- a/src/main/resources/templates/fragments/commons.html
+++ b/src/main/resources/templates/fragments/commons.html
@@ -33,7 +33,7 @@
                         Admin Panel
                     </a>
                     <div class="dropdown-menu" aria-labelledby="adminDropdown">
-                        <a class="dropdown-item" href="#">Option 1</a>
+                        <a class="dropdown-item" href="/products/add">Add product</a>
                         <a class="dropdown-item" href="#">Option 2</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Another Option</a>
