--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -14,19 +14,19 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="product-category">
-                    <h3>Romantic Roses</h3>
-                    <img src="rose.jpg" alt="Rose Bouquet">
+                    <h3>Individual flowers</h3>
+                    <img src="rose.jpg" alt="Individual flowers">
                     <p>A classic arrangement of beautiful red roses. Perfect for expressing love and romance.</p>
-                    <a href="#" class="btn btn-primary">View Products</a>
+                    <a href="/products/individual-flowers" class="btn btn-primary">View Products</a>
                 </div>
             </div>
 
             <div class="col-md-6">
                 <div class="product-category">
-                    <h3>Exotic Orchids</h3>
-                    <img src="orchid.jpg" alt="Exotic Orchids">
+                    <h3>Bouquets</h3>
+                    <img src="orchid.jpg" alt="Bouquets">
                     <p>An elegant mix of exotic orchids in various colors. Add a touch of sophistication to any occasion.</p>
-                    <a href="#" class="btn btn-primary">View Products</a>
+                    <a href="/products/bouquets" class="btn btn-primary">View Products</a>
                 </div>
             </div>
         </div>
@@ -34,19 +34,19 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="product-category">
-                    <h3>Vibrant Tulips</h3>
-                    <img src="tulip.jpg" alt="Vibrant Tulips">
+                    <h3>Presents</h3>
+                    <img src="tulip.jpg" alt="Presents">
                     <p>Brighten up someone's day with a vibrant mix of tulips. A perfect choice for any celebration.</p>
-                    <a href="#" class="btn btn-primary">View Products</a>
+                    <a href="/products/presents" class="btn btn-primary">View Products</a>
                 </div>
             </div>
 
             <div class="col-md-6">
                 <div class="product-category">
-                    <h3>Classic Daisies</h3>
-                    <img src="daisy.jpg" alt="Classic Daisies">
+                    <h3>Special offers</h3>
+                    <img src="daisy.jpg" alt="Special offers">
                     <p>Simple and charming, our classic daisies are perfect for any occasion. Delightful and affordable.</p>
-                    <a href="#" class="btn btn-primary">View Products</a>
+                    <a href="/products/special-offers" class="btn btn-primary">View Products</a>
                 </div>
             </div>
         </div>
