--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -67,3 +67,22 @@ footer {
 textarea {
     resize: none;
 }
+
+.product-container {
+    max-width: 400px;
+    margin: 20px;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
+.product-container img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+.buy-button {
+    width: 100%;
+}
