--- a/src/main/resources/templates/contacts.html
+++ b/src/main/resources/templates/contacts.html
@@ -11,26 +11,42 @@
         <!-- Contact Form -->
         <div class="container">
             <div class="col-md-6 mx-auto">
-                <form class="custom-form">
+                <form class="custom-form" th:action="@{/contacts}" th:method="POST" th:object="${contactMessageBindingModel}">
                     <h2>Contact Us</h2>
+                    <p>Fill this form if you have any issues or questions.</p>
                     <div class="form-group">
                         <label for="fullName">Full Name</label>
-                        <input type="text" class="form-control" id="fullName" placeholder="Enter your full name">
+                        <input th:field="*{fullName}" th:errorclass="bg-danger" type="text" class="form-control" id="fullName" placeholder="Enter your full name">
+                        <small th:if="${#fields.hasErrors('fullName')}" th:errors="*{fullName}" class="text-danger"></small>
                     </div>
                     <div class="form-group">
                         <label for="email">Email address</label>
-                        <input type="email" class="form-control" id="email" placeholder="Enter your email">
+                        <input th:field="*{email}" th:errorclass="bg-danger" type="email" class="form-control" id="email" placeholder="Enter your email">
+                        <small th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-danger"></small>
                     </div>
                     <div class="form-group">
                         <label for="subject">Subject</label>
-                        <input type="subject" class="form-control" id="subject" placeholder="Enter the subject">
+                        <select th:field="*{subject}" th:errorclass="bg-danger" class="form-control"
+                                id="subject">
+                            <option value="">Select a subject</option>
+                            <option th:each="s : ${T(com.Kalium.model.enums.SubjectEnum).values()}"
+                                    th:text="${s}"
+                                    th:value="${s}"
+                                    th:selected="${s} == *{subject}">
+                            </option>
+                        </select>
+                        <small th:if="${#fields.hasErrors('subject')}" th:errors="*{subject}" class="text-danger"></small>
                     </div>
                     <div class="form-group">
                         <label for="message">Message</label>
-                        <textarea class="form-control" id="message" rows="6"
+                        <textarea th:field="*{message}" th:errorclass="bg-danger" class="form-control" id="message" rows="6"
                                   placeholder="Enter your message"></textarea>
+                        <small th:if="${#fields.hasErrors('message')}" th:errors="*{message}" class="text-danger"></small>
                     </div>
                     <button type="submit" class="btn btn-primary btn-block">Send Message</button>
+                    <div th:if="${param.successMessage}" class="alert alert-success">
+                        <p th:text="${param.successMessage}"></p>
+                    </div>
                 </form>
             </div>
         </div>
