Made a manage users page. Users can be deleted and their roles can be changed from user to admin and frmo admin to user

--- a/src/main/resources/templates/fragments/commons.html
+++ b/src/main/resources/templates/fragments/commons.html
@@ -43,8 +43,7 @@
                     <div class="dropdown-menu" aria-labelledby="adminDropdown">
                         <a class="dropdown-item" href="/products/add">Add product</a>
                         <a class="dropdown-item" href="/contacts/messages">Contact messages</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Another Option</a>
+                        <a class="dropdown-item" href="/users/manageUsers">Manage users</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -67,13 +66,13 @@
     <p>&copy; 2023 Flower Delivery</p>
 </footer>
 
-<script src="https://code.jquery.com/jquery-3.6.4.min.js"
-        integrity="sha384-o4/z7nIi9v1Q8sZo2c2szs9rVp1gO5T5t9U5Rxhj+P7abNrsUp7BnKlsG9ZfnA+t"
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 </body>
